--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-terser": "^2.1.0",
-    "node-sass": "^6.0.1"
+    "sass": "^1.44.0"
   }
 }
