--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-terser": "^2.1.0",
+    "gulp-zip": "^5.1.0",
     "sass": "^1.44.0"
   }
 }
